added sample questions and queries

--- a/Capstone Project Template.ipynb
+++ b/Capstone Project Template.ipynb
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "editable": true
    },
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -1222,7 +1222,7 @@
        "9                    2.65         NC                              Asian  11060  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -1931,7 +1931,7 @@
        "max             34.379000                       10.51900"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -2093,7 +2093,7 @@
        "max         156961.000000  3.212500e+06                4.980000  3.835726e+06  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2310,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -2820,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "editable": true
    },
@@ -2853,7 +2853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -2880,13 +2880,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "for index, row in df_temperature_us.iterrows():\n",
+    "for index, row in df_temperature_us.head(100000).iterrows():\n",
     "    cur.execute(temperature_insert, list(row.values))\n",
     "    conn.commit()\n"
    ]
@@ -2904,6 +2904,28 @@
     " * Source/Count checks to ensure completeness\n",
     " \n",
     "Run Quality Checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(datetime.date(1820, 1, 1), 2.101, 3.217, 'Abilene', 'United States', '32.95N', '100.53W')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cur.execute(\"SELECT * FROM temperature limit 1\")\n",
+    "conn.commit()\n",
+    "\n",
+    "print(cur.fetchone())"
    ]
   },
   {
@@ -3086,6 +3108,9 @@
     "| airports | iata_code - name - type - local_code - coordinates - city | stores information related to airports | dimension table |\n",
     "| immigrations | cicid - year - month - cit - res - iata - arrdate - mode - addr - depdate - bir - visa - coun- dtadfil - visapost - occup - entdepa - entdepd - entdepu - matflag - biryear - dtaddto - gender - insnum - airline - admnum - fltno - visatype | stores all i94 immigrations data | fact table |\n",
     "\n",
+    "### Use Cases and User Persona\n",
+    "The above data model can be used by US government agencies to check immigration trends. It can also be used by Airline companies to estimate the number of travellers in a particular season.\n",
+    "Data model could be used to find the  immigration trends at US cities. It can also be used for finding origin of travellers\n",
     "\n",
     "### Table decision\n",
     "\n",
@@ -3115,22 +3140,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Sample questions to be asked on data model:\n",
+    "Find female population in the cities where average temperature is less than 5"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(Decimal('3020884570.0'), 'Aurora'), (Decimal('2313151200.0'), 'Boston'), (Decimal('1525316825.0'), 'Arlington'), (Decimal('1494868320.0'), 'Baltimore'), (Decimal('1079278750.0'), 'Anchorage'), (Decimal('1020334560.0'), 'Albuquerque'), (Decimal('887300205.0'), 'Buffalo'), (Decimal('600478655.0'), 'Akron'), (Decimal('439084500.0'), 'Charlotte'), (Decimal('438096960.0'), 'Cedar Rapids'), (Decimal('437844875.0'), 'Atlanta'), (Decimal('412431075.0'), 'Arvada'), (Decimal('399577500.0'), 'Bridgeport'), (Decimal('374164020.0'), 'Ann Arbor'), (Decimal('366173460.0'), 'Cambridge'), (Decimal('358060320.0'), 'Alexandria'), (Decimal('297609810.0'), 'Bellevue'), (Decimal('199467990.0'), 'Cary'), (Decimal('179966700.0'), 'Amarillo'), (Decimal('119914530.0'), 'Chattanooga'), (Decimal('43987710.0'), 'Birmingham'), (Decimal('43678080.0'), 'Abilene'), (Decimal('30635680.0'), 'Bakersfield'), (Decimal('21520850.0'), 'Carrollton'), (Decimal('4561220.0'), 'Austin'), (Decimal('1073520.0'), 'Charleston'), (Decimal('608290.0'), 'Berkeley'), (Decimal('558090.0'), 'Antioch'), (Decimal('303920.0'), 'Beaumont')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cur.execute(\"SELECT SUM(demo.female_population) as sum_population, temp.city from demographics demo,temperature temp where demo.city=temp.city and temp.average_temperature<5 group by temp.city order by sum_population DESC limit 30\")\n",
+    "conn.commit()\n",
+    "\n",
+    "print(cur.fetchall())"
+   ]
   },
   {
    "cell_type": "code",
